--- a/MyGardenProject2/MyGardenProject2.vcxproj.filters
+++ b/MyGardenProject2/MyGardenProject2.vcxproj.filters
@@ -101,5 +101,8 @@
     <Image Include="..\..\..\..\Downloads\FireShot\Tomato icon.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\IMG_4499-1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
